feat(hero-section): added hero-section in homepage

--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,36 @@
           <button class="signup-button">Crear cuenta</button>
         </div>
       </nav>
+
+       <!--hero-->
+    <div class="hero-section">
+      <h1 class="main-heading">Planifica todos tus ingresos en una misma plataforma</h1>
+      <p class="sub-heading">Sitio oficial de Saifu</p>
+      <button class="cta-button">Regístrate</button>
+      <div class="image image-large-purple">
+        <img src="assets/images/circle-1.png" />
+      </div>
+      <div class="image image-small-blue">
+        <img src="assets/images/circle-7.png" />
+      </div>
+      <div class="image image-small-green">
+        <img src="assets/images/circle-8.png" />
+      </div>
+      <div class="image image-medium-blue">
+        <img src="assets/images/circle-3.png" />
+      </div>
+      <div class="image image-large-pink">
+        <img src="assets/images/circle-4.png" />
+      </div>
+      <div class="image image-large-purple-second">
+        <img src="assets/images/circle-5.png" />
+      </div>
+      <div class="image image-medium-green">
+        <img src="assets/images/circle-6.png" />
+      </div>
+      <div class="image image-extra-large-pink">
+        <img src="assets/images/circle-2.png" />
+      </div>
+  </div>
 </body>
 </html>
