feat(more-information): added more-information section

--- a/public/index.html
+++ b/public/index.html
@@ -58,5 +58,41 @@
         <img src="assets/images/circle-2.png" />
       </div>
   </div>
+
+   <!--more-information-->
+
+   <section class="more-information">
+    <div class ="more-information-container">
+      <div class ="know-more">CONOCE MÁS</div>
+      <div class="about-proyect">Sobre el proyecto</div>
+      <div class="line-container">
+        <img class="line-image" src="assets/images/line.png" />
+      </div>
+      <div class="welcome"><p>Upecinos.AI busca ofrecer una solución 
+        tecnológica avanzada para el consumo responsable en el Perú.</p></div>
+        <div>
+          <button type="button" class="more-button" onclick="location.href='https://estudiante.upc.edu.pe/public'" role="link">Comenzar</button>
+        </div>
+      </div>
+      <div class="woman-image-container">
+          <img class="woman-image" src="assets/images/woman.png" />
+      </div>
+      <div class="capabilities-container">
+          <div class="capabilities-title">Capacidades</div>
+          <div class="capability-high-conexion">
+              <img src="assets/images/icon01.png" />
+              <div>Alta Conexión</div>
+          </div>
+          <div class="capability-share">
+              <img src="assets/images/icon02.png" />
+              <div>Compartir</div>
+          </div>
+          <div class="capability-planification">
+              <img src="assets/images/icon03.png" />
+              <div>Planificación</div>
+          </div>
+      </div>
+  
+</section>
 </body>
 </html>
