feat(collaborators): added collaborators section in homepage

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,14 @@
     </div>
   </section>
 
-  
+   <!--collaborators-->
+   <div class="financial-institutions-banner">
+    <h1 class="banner-title">Algunas de las entidades financieras que colaboran con Saifu</h1>
+    <div class="logos-container">
+        <img class="logo-main" src="assets/images/logo-bn.png" alt="Banco de la Nación" />
+    </div>
+</div>
+
+
 </body>
 </html>
