feat(blog): added blog section in homepage

--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,68 @@
     </div>
 </div>
 
+  <!--blog-->
+  <section class="blog-section">
+    <div class ="blog-information">
+       <h2>Blog</h2>
+       <p>Síguenos en nuestras redes sociales y mantente atento a las últimas novedades</p>
+       <a href="#" class="view-more">Ver más</a>
+    </div>
+     <div class="blog-carousel">
+       <button class="carousel-control prev" onclick="moveSlide(-1)">&#10094;</button>
+       <div class="blog-content">
+         <div class="blog-item">
+           <img src="assets/images/carrrusel01.jpg" alt="Blog Image 1">
+           <h3>Alianza Estratégica con BN</h3>
+           <p>La startup Saifu entabló una alianza estratégica con el Banco de la Nación.</p>
+         </div>
+         <div class="blog-item">
+           <img src="assets/images/carrusel02.jpg" alt="Blog Image 2">
+           <h3>Planificación Financiera Aumenta</h3>
+           <p>Se observa un aumento del 15% en las tasas que evalúan la gestión finaciera en las familias.</p>
+         </div>
+         <div class="blog-item">
+             <img src="assets/images/carrusel03.jpg" alt="Blog Image 3">
+             <h3>Ranking de plataformas financieras</h3>
+             <p>En una reciente evaluación, Saifu obtuvo el
+                primer lugar en el ranking de este año</p>
+         </div>
+         <div class="blog-item">
+           <img src="assets/images/carrrusel01.jpg" alt="Blog Image 1">
+           <h3>Alianza Estratégica con BN</h3>
+           <p>La startup Saifu entabló una alianza estratégica con el Banco de la Nación.</p>
+         </div>
+         <div class="blog-item">
+           <img src="assets/images/carrusel02.jpg" alt="Blog Image 2">
+           <h3>Planificación Financiera Aumenta</h3>
+           <p>Se observa un aumento del 15% en las tasas que evalúan la gestión finaciera en las familias.</p>
+         </div>
+         <div class="blog-item">
+             <img src="assets/images/carrusel03.jpg" alt="Blog Image 3">
+             <h3>Ranking de plataformas financieras</h3>
+             <p>En una reciente evaluación, Saifu obtuvo el
+                primer lugar en el ranking de este año</p>
+         </div>
+         <div class="blog-item">
+           <img src="assets/images/carrrusel01.jpg" alt="Blog Image 1">
+           <h3>Alianza Estratégica con BN</h3>
+           <p>La startup Saifu entabló una alianza estratégica con el Banco de la Nación.</p>
+         </div>
+         <div class="blog-item">
+           <img src="assets/images/carrusel02.jpg" alt="Blog Image 2">
+           <h3>Planificación Financiera Aumenta</h3>
+           <p>Se observa un aumento del 15% en las tasas que evalúan la gestión finaciera en las familias.</p>
+         </div>
+         <div class="blog-item">
+             <img src="images/carrusel03.jpg" alt="Blog Image 3">
+             <h3>Ranking de plataformas financieras</h3>
+             <p>En una reciente evaluación, Saifu obtuvo el
+                primer lugar en el ranking de este año</p>
+         </div>
+         </div>
+       <button class="carousel-control next" onclick="moveSlide(1)">&#10095;</button>
+     </div>
+ </section>
 
 </body>
 </html>
