--- a/public/index.html
+++ b/public/index.html
@@ -202,5 +202,51 @@
      </div>
  </section>
 
+    <!-- footer-->
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="logo-section">
+          <img src="assets/images/logo-footer.png" alt="Saifu Logo" style="height: 50px;">
+          <div class="language-selector-container">
+              <select class="language-selector">
+                <option value="es">Español</option>
+                <!-- Otras opciones -->
+              </select>
+              <div class="language-selector-icon"></div>
+            </div>              
+        </div>  
+        
+        <div class="newsletter-content">
+          <div class="newsletter-container">
+            <div class="newsletter-title">
+              Suscríbete a nuestro boletín informativo
+            </div>
+            <form class="subscribe-container">
+              <input type="email" class="subscribe-input" placeholder="Escribe tu correo" required>
+              <button type="submit" class="subscribe-button">Suscríbete</button>
+            </form>
+          </div>
+        </div>
+
+        <div class="social-media">
+          <a href="https://twitter.com/?lang=es"><img src="assets/images/twitter.png" alt="Twitter"></a>
+          <a href="https://web.facebook.com/"><img src="assets/images/facebook.png" alt="Facebook"></a>
+          <a href="https://pe.linkedin.com/"><img src="assets/images/linkedin.png" alt="LinkedIn"></a>
+        </div>
+      </div>
+      <div class="footer-links">
+        <a href="#">Planes</a>
+        <a href="about-us.html">Saber más</a>
+        <a href="#">Beneficios</a>
+        <a href="#">Ayuda</a>
+        <a href="#">Contáctanos</a>
+        <a href="faq.html">FAQs</a>
+      </div>
+      <div class="footer-bottom">
+        <p>© 2023 Upecinos-AI - <a href="https://estudiante.upc.edu.pe/public">Privacidad</a> - <a href="https://estudiante.upc.edu.pe/public">Términos</a> - <a href="https://estudiante.upc.edu.pe/public">Sitemap</a></p>
+      </div>
+    </footer>
+      
+
 </body>
 </html>
