feat(FAQ): added questions in FAQ

--- a/public/faq.html
+++ b/public/faq.html
@@ -38,6 +38,50 @@
       </div>
     </div>
 
+    <!--seccion of questions-->
+    <div class="faq-section-2">
+        <nav class="faq-sidebar">
+            <ul class="nav-links-2">
+                <li class="nav-item-2 active"><a href="#">General</a></li>
+                <li class="nav-item-2"><a href="#">Comunidad</a></li>
+                <li class="nav-item-2"><a href="#">Plan de Pago</a></li>
+                <li class="nav-item-2"><a href="#">Eliminar cuenta</a></li>
+            </ul>
+        </nav>
+        <div class="faq-content-2">
+            <div class="faq-item">
+                <div class="faq-question">¿Puedo cancelar mi suscripción?</div>
+                <div class="faq-answer">Sí, puedes cancelar tu suscripción en cualquier momento dentro de...</div>
+                <div class="faq-toggle" onclick="toggleFAQ(0)">+</div>
+            </div>
+  
+            <div class="faq-item">
+              <div class="faq-question">¿Cuántos miembros de familia puedo registrar?</div>
+              <div class="faq-answer">Dependiendo del plan que pagues. Míralos</div>
+              <div class="faq-toggle" onclick="toggleFAQ(1)">+</div>
+          </div>
+  
+          <div class="faq-item">
+            <div class="faq-question">¿Qué métodos de pago aceptan?</div>
+            <div class="faq-answer">Aceptamos todo tipo de tarjetas.</div>
+            <div class="faq-toggle" onclick="toggleFAQ(2)">+</div>
+        </div>
+  
+        <div class="faq-item">
+          <div class="faq-question">¿Puedo eliminar mi cuenta?</div>
+          <div class="faq-answer">Si, cuando tu quieras.</div>
+          <div class="faq-toggle" onclick="toggleFAQ(3)">+</div>
+      </div>
+          </div>
+    </div>
+  
+    <!-- -->
+    <section class="contact-faq">
+      <div class="contact-faq-content">
+        <h2>Still have question?</h2>
+        <button onclick="location.href='#';" class="button-faq">Contact us</button>
+    </div>
+  </section>    
      <!-- footer-->
      <footer class="footer">
         <div class="footer-content">
