feat(styles and images): added styles and images in Help Center

--- a/public/ayuda.html
+++ b/public/ayuda.html
@@ -31,7 +31,7 @@
     <!--Centro de ayuda-->
     <main class="Centro-de-ayuda">
         <h1>Centro de Ayuda</h1>
-        <div class="search-box">
+        <div class="search-box-centro">
             <input type="text" placeholder="Necesito ayuda con ...">     
         </div>
 
