feat(contacts): added contacts section

--- a/public/faq.html
+++ b/public/faq.html
@@ -32,7 +32,7 @@
     <div class="faq-section" style="background-image: url(assets/images/faq.png);">
       <div class="faq-content">
           <h1 class="faq-title">Preguntas frecuentes</h1>
-          <div class="search-box-faq">
+          <div class="search-box">
               <input type="search" placeholder="Search" aria-label="Search through site content" class="search-input">
           </div>
       </div>
