--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <li class="nav-item"><a href="about-us.html"> Saber más</a></li>
           <li class="nav-item"><a href="#cards"> Planes</a></li>
           <li class="nav-item"><a href="ayuda.html"> Ayuda</a></li>
-          <li class="nav-item"><a href="#cards"> Contáctanos</a></li>
+          <li class="nav-item"><a href="contacts.html"> Contáctanos</a></li>
           <li class="nav-item"><a href="faq.html"> FAQs</a></li>
           <li class="nav-item"><a href="#cards"> ES</a></li>
         </ul>
@@ -240,7 +240,7 @@
         <a href="about-us.html">Saber más</a>
         <a href="#">Beneficios</a>
         <a href="ayuda.html">Ayuda</a>
-        <a href="#">Contáctanos</a>
+        <a href="contacts.html">Contáctanos</a>
         <a href="faq.html">FAQs</a>
       </div>
       <div class="footer-bottom">
