feat(features): added benefits section

--- a/public/contacts.html
+++ b/public/contacts.html
@@ -15,7 +15,7 @@
       <span> <a href="index.html"> Saifu</a></span>
     </div>
     <ul class="nav-items">
-      <li class="nav-item"><a href="#cards"> Beneficios</a></li>
+      <li class="nav-item"><a href="features.html"> Beneficios</a></li>
       <li class="nav-item"><a href="about-us.html"> Saber más</a></li>
       <li class="nav-item"><a href="#cards"> Planes</a></li>
       <li class="nav-item"><a href="ayuda.html"> Ayuda</a></li>
@@ -123,7 +123,7 @@
           <div class="footer-links">
             <a href="#">Planes</a>
             <a href="about-us.html">Saber más</a>
-            <a href="#">Beneficios</a>
+            <a href="features.html">Beneficios</a>
             <a href="ayuda.html">Ayuda</a>
             <a href="contacts.html">Contáctanos</a>
             <a href="faq.html">FAQs</a>
