feat(comments): added comments section in Features

--- a/public/features.html
+++ b/public/features.html
@@ -41,6 +41,102 @@
             </div>
         </section>
 
+     <!--Segunda sección del feature-->
+     <section id="seccion-2" class="seccion-2">
+        <h1>Beneficios</h1>
+        <div class="beneficios">
+            <div class="seccion-2-1">
+                <i class="fa-solid fa-gear"></i>
+                <h3>Registro de datos financieros</h3>
+                <p>Registra los ingresos y egresos del usuario para luego entablar un presupuesto base.</p>
+            </div>
+            <div class="seccion-2-2">
+                <i class="fa-solid fa-globe"></i>
+                <h3>Documentación</h3>
+                <p>Almacena toda tu información de manera rápida y segura. Genera reportes y guarda versiones locales.</p>
+            </div>
+        </div>
+        <div class="beneficios-2">
+            <div class="seccion-2-3">
+                <i class="fa-regular fa-face-smile"></i>
+                <h3>Supervisión a distancia</h3>
+                <p>Recibe información completa sobre el rendimiento de tu planificación financiera mensual y anual.</p>
+            </div>
+            <div class="seccion-2-4">
+                <i class="fa-solid fa-play"></i>
+                <h3>Análisis de proyecciones</h3>
+                <p>Analiza, procesa la información recolectada y compara con la tasa de inflación, proyecciones macroeconómicas.</p>
+            </div>
+        </div>
+    </section>
+  <!--Tercera sección del feature-->
+  <section id="seccion-3" class="seccion-3">
+    
+    <div class="todo-imagen-seccion-3">
+        <div class="imagen1">
+            <img src="assets/images/section3_negra.png" alt="negra">
+        </div>
+
+        <div class="imagen2">
+            <img src="assets/images/section3_nigga.png" alt="nigga">
+        </div>
+
+        <div class="imagen3">
+            <img src="assets/images/section3_tonykross.png" alt="tonykross">
+        </div>
+
+        <div class="imagen4">
+            <img src="assets/images/section3_niniaaudifonos.png" alt="ninia">
+            <div class="texto">
+                <h1>+56%</h1>
+                <h3>Acogida positiva por el público</h3>
+                <p>Más de 56% de suscriptores señalan a Saifu como alternativa de solución para la gestión financiera.</p>
+            </div>
+        </div>
+
+        <div class="imagen5">
+            <img src="assets/images/section3_gringa.png" alt="gringa">
+        </div>
+
+        <div class="imagen6">
+            <img src="assets/images/section3_chicaderecha1.png" alt="section3_chicaderecha1">
+        </div>
+
+        <div class="imagen7">
+            <img src="assets/images/section3_chicaderecha2.png" alt="section3_chicaderecha2">
+        </div>
+
+        <div class="imagen8">
+            <img src="assets/images/section3_chicaderecha3.png" alt="section3_chicaderecha3">
+        </div>
+    </div>
+</section>
+
+        <!--Cuarta sección del feature-->
+        <section id="seccion-4" class="seccion-4">
+            <div class="seccion-testimonios">
+                <div class="Tertimonios">
+                    <p>Testimonios</p>
+                </div>
+                <div class="comentario actual">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <p>"Gracias a Saifu he podido gestionar el número de gastos hormiga que realizaba y afectaba mi presupuesto base. Ahora me es posible consumir de manera más responsable sin afectar mi estabilidad."</p>
+                    <p>Nombre: Camila Gutiérrez Ramos</p>
+                </div>
+            </div>
+            <div class="section4-imagen">
+                <img src="assets/images/section4_chica.png" alt="chica">
+            </div>
+
+            <div class="section4-imagen2">
+                <img src="assets/images/section4_papu.png" alt="papu">
+            </div>
+        </div>
+        </section>
             <!-- footer-->
     <footer class="footer">
         <div class="footer-content">
