feat(plans): added plans section

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,10 @@
         <ul class="nav-items">
           <li class="nav-item"><a href="features.html"> Beneficios</a></li>
           <li class="nav-item"><a href="about-us.html"> Saber más</a></li>
-          <li class="nav-item"><a href="#cards"> Planes</a></li>
+          <li class="nav-item"><a href="plans.html"> Planes</a></li>
           <li class="nav-item"><a href="ayuda.html"> Ayuda</a></li>
           <li class="nav-item"><a href="contacts.html"> Contáctanos</a></li>
           <li class="nav-item"><a href="faq.html"> FAQs</a></li>
-          <li class="nav-item"><a href="#cards"> ES</a></li>
         </ul>
         <div class="auth">
           <span class="login">Iniciar sesión</span>
@@ -236,7 +235,7 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="#">Planes</a>
+        <a href="plans.html">Planes</a>
         <a href="about-us.html">Saber más</a>
         <a href="features.html">Beneficios</a>
         <a href="ayuda.html">Ayuda</a>
